--- a/form.css
+++ b/form.css
@@ -1,6 +1,6 @@
 :root {
-    --color: #663399;
-    --txt: rgb(185, 185, 185);
+    --color: #a4e615;
+    --txt: rgb(41, 201, 33);
 }
 
 * {
@@ -31,7 +31,7 @@
 
 .logo {
     height: auto;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(253, 5, 253, 0.949);
     position: relative;
     top: 20vh;
     gap: 1vw;
@@ -46,7 +46,7 @@
 
 .right {
     width: 60vw;
-    background-color: #000000;
+    background-color: #0f0f10;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
